# snowflake-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: auth-architecture.md  source-selection.md
src/: _client.py  main.py  server.py
src/snowflake_mcp/: __init__.py  smoke.py  sql_safety.py  tools.py  transport.py  types.py
tests/: conftest.py  test_connection_live.py  test_security.py  test_sql_safety.py  test_tools.py  test_transport.py
